# mensura

./: .gitignore  README.md  mensura_agent_specs.md  mensura_api_outline.md  mensura_architecture.md  mensura_guard_spec.md  mensura_master_spec.md  mensura_monorepo_structure.md  mensura_plugin_sdk_spec.md  mensura_prd.md  mensura_roadmap.md  mensura_setup_guide.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio/src-tauri/capabilities/: default.json
apps/studio/src-tauri/icons/: icon.icns
apps/studio/src-tauri/src/: lib.rs  main.rs
services/core/: README.md  pyproject.toml
services/core/src/mensura_core/: __init__.py  application_models.py  application_repositories.py  application_service.py  application_writer.py  backup_models.py  backup_repositories.py  backup_service.py  change_proposal_models.py  main.py  (+50 more)
services/core/tests/: conftest.py  test_api.py  test_application_api.py  test_backup_api.py  test_change_proposal_api.py  test_context_pack_api.py  test_durable_sql_app.py  test_git_adapter.py  test_guard_api.py  test_guard_runner.py  test_jobs.py  test_jobs_api.py  test_openapi.py  test_persistence.py  test_provider_api.py  test_repository_api.py  test_retention.py  test_run_execution.py  test_sse.py  test_undo_api.py  test_vault_api.py  test_vault_embedding.py  test_vault_index_api.py  test_vault_index_service.py  test_vault_indexer.py  test_vault_search_acceleration.py  test_verification_api.py  test_verification_sweep.py  test_workspace_reservation.py  vault_fakes.py
(+131 files in other folders)
