[package]
name = "mensura-studio"
version = "0.1.0"
description = "Mensura Studio desktop shell"
authors = ["Mensura contributors"]
edition = "2021"
license = "AGPL-3.0-only"
rust-version = "1.77.2"

[lib]
name = "mensura_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
